Fixed RameseteCommand bugs.